--- a/goroda/settings_local.template
+++ b/goroda/settings_local.template
@@ -4,7 +4,7 @@ DEBUG = True
 
 SECRET_KEY = None
 
-ALLOWED_HOSTS = ()
+ALLOWED_HOSTS = ('localhost', '127.0.0.1')
 
 EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
 
